re PR tree-optimization/84228 (Bogus -Wstringop-truncation warning with -g)

PR tree-optimization/84228
	* tree-ssa-strlen.c (maybe_diag_stxncpy_trunc): Skip debug statements.

	* c-c++-common/Wstringop-truncation-3.c: New test.

From-SVN: r257411